--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,15 +1,1 @@
-$prefix: bsk-;
-
-$black: #000;
-$white: #fff;
-$red: #C0392B;
-$gray: #ECF0F1;
-
-$overallPadding: 5px;
-
-$default-fontsize: 16px;
-
-$bootstrap-size-exlg: 1140px;
-$bootstrap-size-lg: 960px;
-$bootstrap-size-md: 768px;
-$bootstrap-size-sm: 540px;
+$bootstrap-green: #28a745;
